package com.lld.elevator.enums;

public enum EventType {
    HALL_CALL,
    ASSIGNMENT,
    SERVED,
    ELEVATOR_MOVED
}
