package com.lld.elevator.enums;

public enum ButtonState {
    IDLE,
    ENGAGED,
    DISABLED
}
