package com.lld.elevator.enums;

public enum Direction {
    UP,
    DOWN,
    IDLE
}
