package com.lld.elevator.enums;

public enum ElevatorMode {
    NORMAL,
    OUT_OF_SERVICE
}
