@startuml
skinparam classAttributeIconSize 0
hide circle

' ===== Enums =====
enum Direction {
  UP
  DOWN
  IDLE
}

enum ElevatorMode {
  NORMAL
  OUT_OF_SERVICE
}

enum ButtonState {
  IDLE
  ENGAGED
  DISABLED
}

enum EventType {
  HALL_CALL
  ASSIGNMENT
  SERVED
  ELEVATOR_MOVED
}

' ===== Observer Pattern =====
interface Subscriber {
  +onEvent(type : EventType, payload : Object)
}

class DomainEventBus {
  +subscribe(type : EventType, s : Subscriber)
  +publish(type : EventType, payload : Object)
}

' ===== Core Entities =====
class Elevator {
  -number : int
  -currentFloor : int
  -direction : Direction
  -mode : ElevatorMode
  -upTargets : SortedSet
  -downTargets : SortedSet
  -eventBus : DomainEventBus
  +Elevator(number : int, startFloor : int, bus : DomainEventBus)
  +getNumber() : int
  +getCurrentFloor() : int
  +getDirection() : Direction
  +getMode() : ElevatorMode
  +enqueue(floor : int, dir : Direction)
  +removeStop(floor : int, dir : Direction)
  +snapshotUp() : List
  +snapshotDown() : List
  +stepOne()
  +status() : String
}

class Target {
  -floorFrom : int
  -direction : Direction
  +Target(floorFrom : int, direction : Direction)
}

class ElevatorSnapshot {
  +id() : int
  +floor() : int
  +direction() : Direction
  +mode() : ElevatorMode
  +upStops() : List
  +downStops() : List
}

class ElevatorManager {
  -elevators : Map
  +ElevatorManager(list : List)
  +getAll() : List
  +addToTargetQueue(elevatorNumber : int, target : Target)
  +removeFromTargetQueue(elevatorNumber : int, target : Target)
  +snapshotAll() : List
  +removeForOthers(servingElevatorNumber : int, floor : int, dir : Direction)
  +stepAll()
}

' ===== Strategy Pattern =====
interface SchedulerStrategy {
  +select(floor : int, direction : Direction, elevators : List) : List
}

class BroadcastStrategy
class ExclusiveEtaStrategy

' ===== Factory Pattern =====
class SchedulerFactory {
  +create(type : String) : SchedulerStrategy
}

' ===== Command Pattern =====
interface Command {
  +execute()
}

interface CommandBus {
  +submit(c : Command)
  +shutdown()
}

class HallCallCommand {
  -dto : HallCallDTO
  -service : ElevatorService
  +execute()
}

class CarCallCommand {
  -dto : CarCallDTO
  -service : ElevatorService
  +execute()
}

' ===== Buttons =====
abstract class Button {
  +getId() : int
  +getState() : ButtonState
  +press()
}

class HallButton {
  +HallButton(floor : int, dir : Direction, bus : CommandBus, svc : ElevatorService)
  +press()
}

class CabinButton {
  +CabinButton(elevatorId : int, floor : int, bus : CommandBus, svc : ElevatorService)
  +press()
}

' ===== DTOs =====
class HallCallDTO {
  +floor() : int
  +direction() : Direction
}

class CarCallDTO {
  +elevatorId() : int
  +floor() : int
}

' ===== Registry & Service =====
class PendingHallRegistry {
  +PendingHallRegistry(bus : DomainEventBus, mgr : ElevatorManager)
  +add(floor : int, dir : Direction)
}

class ElevatorService {
  -elevatorManager : ElevatorManager
  -eventBus : DomainEventBus
  -pendingRegistry : PendingHallRegistry
  -scheduler : SchedulerStrategy
  +ElevatorService(m : ElevatorManager, s : SchedulerStrategy, bus : DomainEventBus)
  +setStrategy(strategy : SchedulerStrategy)
  +requestElevator(floor : int, direction : Direction)
  +requestCarCall(elevatorId : int, floor : int)
  +stepAll()
  +printStatus()
}

' ===== Facade Layer (Singleton) =====
class ElevatorSystem {
  -static instance : ElevatorSystem
  -service : ElevatorService
  -bus : CommandBus
  +init(service : ElevatorService, bus : CommandBus)
  +getInstance() : ElevatorSystem
  +pressUpButton(floor : int)
  +pressDownButton(floor : int)
  +pressCabinFloorButton(elevatorId : int, floor : int)
  +step()
  +print()
  +shutdown()
}

' ===== Relationships =====
ElevatorManager "1" o-- "*" Elevator : manages
ElevatorService --> ElevatorManager : uses
ElevatorService --> SchedulerStrategy : uses
ElevatorService --> DomainEventBus : uses
PendingHallRegistry --> DomainEventBus : uses
PendingHallRegistry --> ElevatorManager : uses
BroadcastStrategy ..|> SchedulerStrategy : implements
ExclusiveEtaStrategy ..|> SchedulerStrategy : implements
SchedulerFactory --> SchedulerStrategy : creates
HallCallCommand --> HallCallDTO : uses
HallCallCommand --> ElevatorService : uses
CarCallCommand --> CarCallDTO : uses
CarCallCommand --> ElevatorService : uses
HallButton --> CommandBus : uses
HallButton --> ElevatorService : uses
CabinButton --> CommandBus : uses
CabinButton --> ElevatorService : uses
DomainEventBus --> Subscriber : notifies
ElevatorManager --> ElevatorSnapshot : creates
Elevator --> DomainEventBus : publishes
ElevatorSystem --> ElevatorService : facade-to-service
ElevatorSystem --> CommandBus : orchestrates
@enduml